Выполнение ТЗ 6 спринта